java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/ImplicitClassConstructorParam.java
void main(String[] args) {
  System.out.println("AAAAA");
}

<error descr="Explicit constructor in implicitly declared class is not allowed">public ImplicitClassConstructorParam(String a)</error> {
  System.out.println("BBBBB");
}